--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -24,10 +24,10 @@ jobs:
           registry-url: https://registry.npmjs.org
 
       - name: Install pnpm
-        run: npm install -g pnpm@8
+        run: npm install -g pnpm@10.26.2
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Build
         run: pnpm run docs:build
