feat: 添加@theojs/lumen依赖并实现页脚功能
添加@theojs/lumen依赖包用于实现页脚功能
在主题配置中引入Footer组件并配置页脚数据
新增footerData.ts文件定义页脚内容和链接
更新package.json添加新依赖

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@nolebase/vitepress-plugin-enhanced-readabilities": "^2.18.2",
+    "@theojs/lumen": "^6.4.5",
     "canvas-confetti": "^1.9.4",
     "vitepress": "^1.6.4"
   },
